2016-11-11  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r26628.

	* base/openvas_file.c (openvas_export_file_name): Move format_state = 0
	assignment so it doesn't overwrite values set in the switch case block.

2016-11-09  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 9.0.1.

2016-11-09  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Preparing the openvas-libraries 9.0.0 release.

	* CHANGES: Updated.

	* CMakeLists.txt: Update version status from beta to stable.

2016-11-08  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* COPYING: Update. It was missing the separation of the osp module.

2016-11-08  Christian Fischer <christian.fischer@greenbone.net>

	* nasl/nasl_var.c (nasl_array_iterator): Add lexic context to
	nasl_perror() call.

	* nasl/nasl_var.h: Adjust function header.

	* nasl/exec.c (nasl_exec): Adjust nasl_array_iterator call.

2016-11-07  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/exec.c (cell2int3, cell2int, cell2intW, int2cell): Change
	returned variable from int to long int.
	(cell_cmp, nasl_exec): Use long int instead of int for nasl integer variables.

	* nasl/nasl_grammar.y (YYSTYPE): Change num type to long int.

	* nasl/nasl_tree.h (tree_cell): Change i_val type to long int.

	* nasl/nasl_tree.c (dump_cell_val): Adjust for i_val type change.

	* nasl/nasl_var.h (anon_nasl_var): Change v_int type to long int.

	* nasl/nasl_var.c (array2str, var2str): Adjust for v_int type change.

2016-11-04  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* omp/omp.c (omp_get_system_reports_ext): Add new OMP command
	attributes start_time and end_time.

	* omp/omp.h (omp_get_system_reports_opts_t): Add new fields start_time
	and end_time.
	(omp_get_system_reports_opts_defaults): Add new fields.

2016-11-03  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/network.c (open_stream_connection_ext): Set hostname in SSLv2
	case too.
